Fixed horizontal scrolling

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -28,6 +28,7 @@ body {
   margin-top: -150px; /* negative value of footer height */
   clear:both;
   padding-top:20px;
+  overflow:hidden;
 } 
 
 .headerrow {
@@ -55,11 +56,6 @@ body {
 
 .contactrow {
     margin-top:100px;
-    background-color:rgba(0,0,0,0.8);
-}
-
-.contactrow-final {
-    padding-bottom:25px;
     background-color:rgba(0,0,0,0.8);
 }
 
